Fixes issue with forced dark mode not changing some element styles.

--- a/src/css/structurizr-dark.css
+++ b/src/css/structurizr-dark.css
@@ -157,6 +157,16 @@ hr {
     border-right: solid 1px #000000;
 }
 
+.structurizrDiagramViewport {
+    background: #333333;
+}
+
+.diagramThumbnailActive {
+    background: #333333;
+    color: #ffffff;
+    border: solid 1px #333333;
+}
+
 #documentationContent table th, #decisionLogContent table th {
     background: #333333;
 }
