--- a/src/css/structurizr.css
+++ b/src/css/structurizr.css
@@ -441,10 +441,85 @@ hr {
     margin-left: 0;
     margin-right: 0;
 }
+
 #diagramNavigationPanel {
     background: #ffffff;
     overflow-y: scroll;
     border-right: solid 1px #dddddd;
+}
+
+#diagram {
+    background: gray;
+    margin: 0;
+    padding: 0;
+    border-style: none;
+}
+
+.diagramThumbnail {
+    cursor: pointer;
+    margin: 0 0 40px 0;
+    padding: 10px;
+    border-radius: 5px;
+}
+
+.diagramThumbnail img {
+    max-height: 160px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 10px;
+}
+
+.diagramThumbnailActive {
+    background: #aaaaaa;
+    color: #ffffff;
+}
+
+.structurizrDiagramViewport {
+    text-align: center;
+    margin: 0 auto 0 auto;
+    padding: 0;
+    border-style: none;
+    overflow: scroll;
+}
+
+.structurizrDiagramCanvas {
+    border-style: none;
+    background: white;
+    padding: 0;
+    margin: auto;
+}
+
+.structurizrElement .highlightedElement {
+    stroke-width: 5px;
+    stroke: #777777;
+    stroke-dasharray: 10 10;
+}
+
+.joint-element * {
+    vector-effect: none;
+}
+
+.joint-link.joint-theme-default .marker-vertex {
+    fill: #1168BD;
+    r: 25px;
+}
+
+.joint-link.joint-theme-default .marker-vertex:hover {
+    fill: #08427B;
+    r: 25px;
+}
+
+.joint-link.joint-theme-default .connection-wrap:hover {
+    opacity: 0;
+    stroke-opacity: 0;
+}
+
+#navigationModal option {
+    padding: 5px;
+}
+
+#quickFindModal .viewKey {
+    font-size: 75%;
 }
 
 #banner {
@@ -457,6 +532,9 @@ hr {
     margin-top: 5px;
 }
 
+.btn {
+    cursor: default;
+}
 .btn-active {
     background: #999999;
 }
